# ScreenCraftAPI.com

./: README.md
go/: LICENSE  README.md  errors.go  go.mod  pdf.go  screencraft.go  screenshot.go  types.go
nodejs/: .editorconfig  .eslintrc.js  .gitignore  .npmignore  CHANGELOG.md  CONTRIBUTING.md  INDEX.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SETUP.md  jest.config.js  package.json  tsconfig.build.json  verify-setup.js
nodejs/.github/workflows/: ci.yml
nodejs/examples/: README.md  async-webhook.ts  basic-screenshot.ts  error-handling.ts  fullpage-screenshot.ts  generate-pdf.ts  mobile-screenshot.ts
nodejs/src/: client.test.ts  client.ts  errors.ts  index.ts  types.ts
python/: README.md  pyproject.toml  requirements.txt
python/screencraft/: __init__.py  client.py  errors.py  types.py
