[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screencraft"
version = "1.0.0"
description = "Official Python SDK for the ScreenCraft API - capture screenshots and generate PDFs from web pages"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "ScreenCraft", email = "support@screencraftapi.com"}
]
maintainers = [
    {name = "ScreenCraft", email = "support@screencraftapi.com"}
]
keywords = [
    "screencraft",
    "screenshot",
    "pdf",
    "web",
    "api",
    "capture",
    "headless",
    "browser",
    "automation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
async = [
    "aiohttp>=3.8.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "responses>=0.23.0",
    "aioresponses>=0.7.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "types-requests>=2.31.0",
]
all = [
    "screencraft[async,dev]",
]

[project.urls]
Homepage = "https://screencraftapi.com"
Documentation = "https://screencraftapi.com/docs"
Repository = "https://github.com/screencraft/screencraft-python"
Changelog = "https://github.com/screencraft/screencraft-python/blob/main/CHANGELOG.md"
"Bug Tracker" = "https://github.com/screencraft/screencraft-python/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["screencraft*"]

[tool.setuptools.package-data]
screencraft = ["py.typed"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    "aiohttp.*",
    "requests.*",
]
ignore_missing_imports = true

[tool.ruff]
target-version = "py38"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.ruff.isort]
known-first-party = ["screencraft"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["screencraft"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=screencraft --cov-report=term-missing"

[tool.coverage.run]
source = ["screencraft"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
